feat: Setup CourseVideoActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,24 +27,32 @@
         android:theme="@style/Theme.LearnWithFun"
         tools:targetApi="34">
         <activity
+            android:name=".presentation.course_video.CourseVideoActivity"
+            android:exported="false"
+            />
+        <activity
             android:name=".presentation.exam.ExamActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".presentation.home.HomeActivity"
-            android:exported="true" >
+            android:exported="true"
+            android:screenOrientation="portrait">
+
+        </activity>
+        <activity
+            android:name=".presentation.login.LoginActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".presentation.splash.SplashScreenActivity"
+            android:exported="true"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name=".presentation.login.LoginActivity"
-            android:exported="false" />
-        <activity
-            android:name=".presentation.splash.SplashScreenActivity"
-            android:exported="true">
-
         </activity>
     </application>
 
