--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,17 +38,20 @@
         </activity>
         <activity
             android:name=".presentation.login.LoginSignUpActivity"
-            android:exported="false"
-            android:screenOrientation="portrait"/>
-        <activity
-            android:name=".presentation.splash.SplashScreenActivity"
             android:exported="true"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".presentation.splash.SplashScreenActivity"
+            android:exported="true"
+            android:screenOrientation="portrait">
+
         </activity>
         <meta-data
             android:name="com.google.firebase.ml.vision.DEPENDENCIES"
