--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,8 +39,7 @@
         <activity
             android:name=".presentation.login.LoginSignUpActivity"
             android:exported="false"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize"/>
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".presentation.splash.SplashScreenActivity"
             android:exported="true"
