fix: Quiz Cheating Image Upload Exception

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
         <activity
             android:name=".presentation.quiz.QuizActivity"
             android:exported="false"
+            android:screenOrientation="portrait"
             />
         <activity
             android:name=".presentation.home.HomeActivity"
